--- a/TAC_COM/Views/SettingsPanelView.xaml
+++ b/TAC_COM/Views/SettingsPanelView.xaml
@@ -26,7 +26,7 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Width="Auto"
-                        Height="450">
+                        Height="460">
 
                 <StackPanel Width="400"
                             VerticalAlignment="Center"
@@ -296,6 +296,33 @@
                                    TextAlignment="Left"
                                    Grid.Column="2">
                             Minimises the application to the system tray instead of the taskbar.
+                        </TextBlock>
+                    </Grid>
+
+                    <Grid VerticalAlignment="Center"
+                          HorizontalAlignment="Left"
+                          Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <CheckBox IsChecked="{Binding DisableMicClickSFX}"
+                                  Content="Disable mic click SFX"
+                                  Margin="5"
+                                  Grid.Column="0" />
+
+                        <StackPanel Grid.Column="1"
+                                    Width="200" />
+
+                        <TextBlock Width="170"
+                                   TextWrapping="WrapWithOverflow"
+                                   FontSize="10"
+                                   VerticalAlignment="Center"
+                                   TextAlignment="Left"
+                                   Grid.Column="2">
+                            Disables the radio mic click sfx when toggling the radio effect.
                         </TextBlock>
                     </Grid>
                 </StackPanel>
